# rust-frontegg

./: .gitignore  CHANGELOG.md  Cargo.toml  MAINTAINERS.md  README.md  pyproject.toml  release.toml
.github/workflows/: ci.yml
src/: client.rs  config.rs  error.rs  lib.rs  serde.rs  util.rs
src/client/: roles.rs  tenants.rs  users.rs
tests/: api.py  api.rs
