[package]
name = "frontegg"
authors = ["Materialize, Inc."]
readme = "README.md"
description = "An async API client for the Frontegg user management service."
documentation = "https://docs.rs/frontegg"
license = "Apache-2.0"
categories = ["api-bindings", "web-programming"]
keywords = ["frontegg", "front", "egg", "api", "sdk"]
repository = "https://github.com/MaterializeInc/rust-frontegg"
version = "0.7.0"
rust-version = "1.81.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
futures-core = "0.3.31"
once_cell = "1.20.3"
reqwest = { version = "0.12.12", features = ["json"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
time = { version = "0.3.37", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.38.1" }
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[dev-dependencies]
futures = "0.3.31"
test-log = { version = "0.2.14", default-features = false, features = ["trace"] }
tokio = { version = "1.38.1", features = ["macros"] }
tokio-stream = "0.1.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wiremock = "0.6.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
